# csvtojson

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sample.json
.github/workflows/: ci.yml  docker.yml
src/csvtojson/: cli.py  convert.py
tests/: test_convert.py  test_smoke.py
