[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csvtojson"                  # <— distribution name
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5"
]

[tool.setuptools]
package-dir = {"" = "src"}          # <— tell setuptools we use src layout

[tool.setuptools.packages.find]
where = ["src"]                      # <— discover packages under src/

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--cov",                           # let coverage config pick sources
  "--cov-report=html",
  "--cov-report=term-missing"
]

[tool.coverage.run]
branch = true
source = ["src"]                     # <— scales if you add more packages
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 50            # test coverage required minimum percentage
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == '__main__':",      # <— fixed
  "if TYPE_CHECKING:",
]

[project.scripts]
csv2json = "csvtojson.cli:main"
